update for SP25

--- a/cecs-326-SP25-01-syllabus-1121.html
+++ b/cecs-326-SP25-01-syllabus-1121.html
@@ -1,6 +1,6 @@
 <h1 id="operating-systems">Operating Systems</h1>
-<h2 id="cecs-326-section-1-1126">CECS 326: Section 1 (1126)</h2>
-<h3 id="spring-2024">Spring 2024</h3>
+<h2 id="cecs-326-section-1-1121">CECS 326: Section 1 (1121)</h2>
+<h3 id="spring-2025">Spring 2025</h3>
 <table>
 <thead>
 <tr class="header">
@@ -188,64 +188,68 @@ specification.</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td>1</td>
+<td>Jan 20</td>
 <td>Introduction to Operating Systems (Ch 1)</td>
 </tr>
 <tr class="even">
-<td>2</td>
+<td>Jan 27</td>
 <td>Processes and Threads (Ch 2)</td>
 </tr>
 <tr class="odd">
-<td>3</td>
+<td>Feb 3</td>
 <td>Processes and Threads, ctd</td>
 </tr>
 <tr class="even">
-<td>4</td>
+<td>Feb 10</td>
 <td>First Midterm, Memory Management (Ch 3)</td>
 </tr>
 <tr class="odd">
-<td>5</td>
+<td>Feb 17</td>
 <td>Memory Management, ctd</td>
 </tr>
 <tr class="even">
-<td>6</td>
-<td>Deadlocks</td>
+<td>Feb 24</td>
+<td>Deadlock</td>
 </tr>
 <tr class="odd">
-<td>7</td>
-<td>Deadlocks, ctd</td>
+<td>Mar 3</td>
+<td>Deadlock, ctd</td>
 </tr>
 <tr class="even">
-<td>8</td>
+<td>Mar 10</td>
 <td>I/O (ch 5)</td>
 </tr>
 <tr class="odd">
-<td>9</td>
+<td>Mar 17</td>
 <td>I/O, ctd</td>
 </tr>
 <tr class="even">
-<td>10</td>
+<td>Mar 14</td>
+<td>Second Midterm</td>
+</tr>
+<tr class="odd">
+<td>Mar 31</td>
 <td><strong>Spring Break</strong></td>
 </tr>
-<tr class="odd">
-<td>11</td>
-<td>Second Midterm, File Systems (Ch 6)</td>
-</tr>
 <tr class="even">
-<td>12</td>
+<td>Apr 7</td>
+<td>File Systems (Ch 6)</td>
+</tr>
+<tr class="odd">
+<td>Apr 14</td>
 <td>File Systems, ctd</td>
 </tr>
-<tr class="odd">
-<td>13</td>
+<tr class="even">
+<td>Apr 21</td>
 <td>Virtualization (Ch 7)</td>
 </tr>
-<tr class="even">
-<td>14</td>
+<tr class="odd">
+<td>Apr 28</td>
 <td>Virtualization, ctd</td>
 </tr>
-<tr class="odd">
-<td>15-16</td>
-<td>Case Study, Final Exam</td>
+<tr class="even">
+<td>May 5-12</td>
+<td>Case Studies, Final Exam</td>
 </tr>
 </tbody>
 </table>
